crates/cuda-macros/tests/compile_fail/index_1d_u32_generic_helper_requires_entry_launch_context.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> tests/compile_fail/index_1d_u32_generic_helper_requires_entry_launch_context.rs:18:5
   |
18 |     fast_helper::<4>();
   |     ^^^^^^^^^^^^^^^^-- argument #1 of type `&cuda_device::LaunchContext<'_, cuda_device::__internal::Domain1, cuda_device::__internal::U32Coordinates>` is missing
   |
note: function defined here
  --> tests/compile_fail/index_1d_u32_generic_helper_requires_entry_launch_context.rs:8:8
   |
 6 | #[kernel(launch_context = launch_context)]
   | ------------------------------------------
 7 | #[launch_contract(domain = 1, coordinates = u32, block = (64, 1, 1))]
 8 | pub fn fast_helper<const N: u32>() {
   |        ^^^^^^^^^^^
help: provide the argument
   |
18 |     fast_helper::<4>(/* &cuda_device::LaunchContext<'_, cuda_device::__internal::Domain1, cuda_device::__internal::U32Coordinates> */);
   |                      ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
